tricc_oo/converters/xlsform/g4/xlsform.g4
// $antlr-format alignTrailingComments true, columnLimit 150, minEmptyLines 1, maxEmptyLinesToKeep 1, reflowComments false, useTab false
// $antlr-format allowShortRulesOnASingleLine false, allowShortBlocksOnASingleLine true, alignSemicolons hanging, alignColons hanging

grammar xlsform;

/*
XPath 1.0 grammar. Should conform to the official spec at
http://www.w3.org/TR/1999/REC-xpath-19991116. The grammar
rules have been kept as close as possible to those in the
spec, but some adjustmewnts were unavoidable. These were
mainly removing left recursion (spec seems to be based on
LR), and to deal with the double nature of the '*' token
(node wildcard and multiplication operator). See also
section 3.7 in the spec. These rule changes should make
no difference to the strings accepted by the grammar.

Written by Jan-Willem van den Broek
Version 1.0

Do with this code as you will.
*/
/*
    Ported to Antlr4 by Tom Everett <tom@khubla.com>
*/
/*
BSD License

Copyright (c) 2018, Tom Everett
All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions
are met:

1. Redistributions of source code must retain the above copyright
   notice, this list of conditions and the following disclaimer.
2. Redistributions in binary form must reproduce the above copyright
   notice, this list of conditions and the following disclaimer in the
   documentation and/or other materials provided with the distribution.
3. Neither the name of Tom Everett nor the names of its contributors
   may be used to endorse or promote products derived from this software
   without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/

main
    : expr EOF
    ;

locationPath
    : relativeLocationPath
    | absoluteLocationPathNoroot
    ;

absoluteLocationPathNoroot
    : '/' relativeLocationPath
    | '//' relativeLocationPath
    ;

relativeLocationPath
    : step (('/' | '//') step)*
    ;

step
    : axisSpecifier nodeTest predicate*
    | abbreviatedStep
    ;

axisSpecifier
    : AxisName '::'
    | AT?
    ;

nodeTest
    : nameTest
    | NodeType '(' ')'
    | 'processing-instruction' '(' Literal ')'
    ;

predicate
    : '[' expr ']'
    ;

abbreviatedStep
    : '.'
    | '..'
    ;

expr
    : orExpr
    ;

primaryExpr
    : variableReference
    | '(' expr ')'
    | Literal
    | Number
    | functionCall
    ;

functionCall
    : functionName '(' (expr ( ',' expr)*)? ')'
    ;

unionExprNoRoot
    : pathExprNoRoot ('|' unionExprNoRoot)?
    | '/' '|' unionExprNoRoot
    ;

pathExprNoRoot
    : locationPath
    | filterExpr (('/' | '//') relativeLocationPath)?
    ;

filterExpr
    : primaryExpr predicate*
    ;

orExpr
    : andExpr (OR andExpr)*
    ;

andExpr
    : equalityExpr (AND equalityExpr)*
    ;

equalityExpr
    : relationalExpr (('=' | '!=') relationalExpr)*
    ;

relationalExpr
    : additiveExpr (('<' | '>' | '<=' | '>=') additiveExpr)*
    ;

additiveExpr
    : multiplicativeExpr (('+' | '-') multiplicativeExpr)*
    ;

multiplicativeExpr
    : unaryExprNoRoot (('*' | DIV | MOD) multiplicativeExpr)?
    | '/' ((DIV | MOD) multiplicativeExpr)?
    ;

unaryExprNoRoot
    : '-'* unionExprNoRoot
    ;

qName
    : nCName (':' nCName)?
    ;

// Does not match NodeType, as per spec.
functionName
    : nCName ':' nCName
    | NCName
    | AxisName
    | AND
    | OR
    | DIV
    | MOD
    ;

variableReference
    : '$' qName                                                                                     #standardReference
    | '${' NCName '}'                                                                               #internalReference
    ;

nameTest
    : '*'
    | nCName ':' '*'
    | qName
    ;

nCName
    : NCName
    | AxisName
    | NodeType
    | AND
    | OR
    | DIV
    | MOD
    ;

NodeType
    : 'comment'
    | 'text'
    | 'processing-instruction'
    | 'node'
    ;

Number
    : Digits ('.' Digits?)?
    | '.' Digits
    ;

fragment Digits
    : ('0' ..'9')+
    ;

AxisName
    : 'ancestor'
    | 'ancestor-or-self'
    | 'attribute'
    | 'child'
    | 'descendant'
    | 'descendant-or-self'
    | 'following'
    | 'following-sibling'
    | 'namespace'
    | 'parent'
    | 'preceding'
    | 'preceding-sibling'
    | 'self'
    ;

PATHSEP
    : '/'
    ;

ABRPATH
    : '//'
    ;

LPAR
    : '('
    ;

RPAR
    : ')'
    ;

LBRAC
    : '['
    ;

RBRAC
    : ']'
    ;

MINUS
    : '-'
    ;

PLUS
    : '+'
    ;

DOT
    : '.'
    ;

MUL
    : '*'
    ;

DOTDOT
    : '..'
    ;

AT
    : '@'
    ;

COMMA
    : ','
    ;

PIPE
    : '|'
    ;

LESS
    : '<'
    ;

MORE_
    : '>'
    ;

LE
    : '<='
    ;

GE
    : '>='
    ;

COLON
    : ':'
    ;

CC
    : '::'
    ;

APOS
    : '\''
    ;

QUOT
    : '"'
    ;

AND
    : 'and'
    ;

OR
    : 'or'
    ;

DIV
    : 'div'
    ;

MOD
    : 'mod'
    ;

Literal
    : '"' ~'"'* '"'
    | '\'' ~'\''* '\''
    ;

Whitespace
    : (' ' | '\t' | '\n' | '\r')+ -> skip
    ;

NCName
    : NCNameStartChar NCNameChar*
    ;

fragment NCNameStartChar
    : 'A' ..'Z'
    | '_'
    | 'a' ..'z'
    | '\u00C0' ..'\u00D6'
    | '\u00D8' ..'\u00F6'
    | '\u00F8' ..'\u02FF'
    | '\u0370' ..'\u037D'
    | '\u037F' ..'\u1FFF'
    | '\u200C' ..'\u200D'
    | '\u2070' ..'\u218F'
    | '\u2C00' ..'\u2FEF'
    | '\u3001' ..'\uD7FF'
    | '\uF900' ..'\uFDCF'
    | '\uFDF0' ..'\uFFFD'
    | '\u{10000}' ..'\u{EFFFF}'
    ;

fragment NCNameChar
    : NCNameStartChar
    | '-'
    | '.'
    | '0' ..'9'
    | '\u00B7'
    | '\u0300' ..'\u036F'
    | '\u203F' ..'\u2040'
    ;
