tricc_oo/converters/xlsform/g4/xlsformParser.py
# Generated from ./tricc_oo/converters/xlsform/g4/xlsform.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class xlsformParser ( Parser ):

    grammarFileName = "xlsform.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'processing-instruction'", "'='", "'!='", 
                     "'$'", "'${'", "'}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'/'", "'//'", "'('", "')'", "'['", "']'", "'-'", "'+'", 
                     "'.'", "'*'", "'..'", "'@'", "','", "'|'", "'<'", "'>'", 
                     "'<='", "'>='", "':'", "'::'", "'''", "'\"'", "'and'", 
                     "'or'", "'div'", "'mod'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NodeType", 
                      "Number", "AxisName", "PATHSEP", "ABRPATH", "LPAR", 
                      "RPAR", "LBRAC", "RBRAC", "MINUS", "PLUS", "DOT", 
                      "MUL", "DOTDOT", "AT", "COMMA", "PIPE", "LESS", "MORE_", 
                      "LE", "GE", "COLON", "CC", "APOS", "QUOT", "AND", 
                      "OR", "DIV", "MOD", "Literal", "Whitespace", "NCName" ]

    RULE_main = 0
    RULE_locationPath = 1
    RULE_absoluteLocationPathNoroot = 2
    RULE_relativeLocationPath = 3
    RULE_step = 4
    RULE_axisSpecifier = 5
    RULE_nodeTest = 6
    RULE_predicate = 7
    RULE_abbreviatedStep = 8
    RULE_expr = 9
    RULE_primaryExpr = 10
    RULE_functionCall = 11
    RULE_unionExprNoRoot = 12
    RULE_pathExprNoRoot = 13
    RULE_filterExpr = 14
    RULE_orExpr = 15
    RULE_andExpr = 16
    RULE_equalityExpr = 17
    RULE_relationalExpr = 18
    RULE_additiveExpr = 19
    RULE_multiplicativeExpr = 20
    RULE_unaryExprNoRoot = 21
    RULE_qName = 22
    RULE_functionName = 23
    RULE_variableReference = 24
    RULE_nameTest = 25
    RULE_nCName = 26

    ruleNames =  [ "main", "locationPath", "absoluteLocationPathNoroot", 
                   "relativeLocationPath", "step", "axisSpecifier", "nodeTest", 
                   "predicate", "abbreviatedStep", "expr", "primaryExpr", 
                   "functionCall", "unionExprNoRoot", "pathExprNoRoot", 
                   "filterExpr", "orExpr", "andExpr", "equalityExpr", "relationalExpr", 
                   "additiveExpr", "multiplicativeExpr", "unaryExprNoRoot", 
                   "qName", "functionName", "variableReference", "nameTest", 
                   "nCName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    NodeType=7
    Number=8
    AxisName=9
    PATHSEP=10
    ABRPATH=11
    LPAR=12
    RPAR=13
    LBRAC=14
    RBRAC=15
    MINUS=16
    PLUS=17
    DOT=18
    MUL=19
    DOTDOT=20
    AT=21
    COMMA=22
    PIPE=23
    LESS=24
    MORE_=25
    LE=26
    GE=27
    COLON=28
    CC=29
    APOS=30
    QUOT=31
    AND=32
    OR=33
    DIV=34
    MOD=35
    Literal=36
    Whitespace=37
    NCName=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(xlsformParser.ExprContext,0)


        def EOF(self):
            return self.getToken(xlsformParser.EOF, 0)

        def getRuleIndex(self):
            return xlsformParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = xlsformParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.expr()
            self.state = 55
            self.match(xlsformParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relativeLocationPath(self):
            return self.getTypedRuleContext(xlsformParser.RelativeLocationPathContext,0)


        def absoluteLocationPathNoroot(self):
            return self.getTypedRuleContext(xlsformParser.AbsoluteLocationPathNorootContext,0)


        def getRuleIndex(self):
            return xlsformParser.RULE_locationPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocationPath" ):
                listener.enterLocationPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocationPath" ):
                listener.exitLocationPath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocationPath" ):
                return visitor.visitLocationPath(self)
            else:
                return visitor.visitChildren(self)




    def locationPath(self):

        localctx = xlsformParser.LocationPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_locationPath)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 7, 9, 18, 19, 20, 21, 32, 33, 34, 35, 38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.relativeLocationPath()
                pass
            elif token in [10, 11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.absoluteLocationPathNoroot()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AbsoluteLocationPathNorootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATHSEP(self):
            return self.getToken(xlsformParser.PATHSEP, 0)

        def relativeLocationPath(self):
            return self.getTypedRuleContext(xlsformParser.RelativeLocationPathContext,0)


        def ABRPATH(self):
            return self.getToken(xlsformParser.ABRPATH, 0)

        def getRuleIndex(self):
            return xlsformParser.RULE_absoluteLocationPathNoroot

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAbsoluteLocationPathNoroot" ):
                listener.enterAbsoluteLocationPathNoroot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAbsoluteLocationPathNoroot" ):
                listener.exitAbsoluteLocationPathNoroot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbsoluteLocationPathNoroot" ):
                return visitor.visitAbsoluteLocationPathNoroot(self)
            else:
                return visitor.visitChildren(self)




    def absoluteLocationPathNoroot(self):

        localctx = xlsformParser.AbsoluteLocationPathNorootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_absoluteLocationPathNoroot)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(xlsformParser.PATHSEP)
                self.state = 62
                self.relativeLocationPath()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.match(xlsformParser.ABRPATH)
                self.state = 64
                self.relativeLocationPath()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelativeLocationPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def step(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xlsformParser.StepContext)
            else:
                return self.getTypedRuleContext(xlsformParser.StepContext,i)


        def PATHSEP(self, i:int=None):
            if i is None:
                return self.getTokens(xlsformParser.PATHSEP)
            else:
                return self.getToken(xlsformParser.PATHSEP, i)

        def ABRPATH(self, i:int=None):
            if i is None:
                return self.getTokens(xlsformParser.ABRPATH)
            else:
                return self.getToken(xlsformParser.ABRPATH, i)

        def getRuleIndex(self):
            return xlsformParser.RULE_relativeLocationPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelativeLocationPath" ):
                listener.enterRelativeLocationPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelativeLocationPath" ):
                listener.exitRelativeLocationPath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelativeLocationPath" ):
                return visitor.visitRelativeLocationPath(self)
            else:
                return visitor.visitChildren(self)




    def relativeLocationPath(self):

        localctx = xlsformParser.RelativeLocationPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_relativeLocationPath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.step()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10 or _la==11:
                self.state = 68
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 69
                self.step()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def axisSpecifier(self):
            return self.getTypedRuleContext(xlsformParser.AxisSpecifierContext,0)


        def nodeTest(self):
            return self.getTypedRuleContext(xlsformParser.NodeTestContext,0)


        def predicate(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xlsformParser.PredicateContext)
            else:
                return self.getTypedRuleContext(xlsformParser.PredicateContext,i)


        def abbreviatedStep(self):
            return self.getTypedRuleContext(xlsformParser.AbbreviatedStepContext,0)


        def getRuleIndex(self):
            return xlsformParser.RULE_step

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStep" ):
                listener.enterStep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStep" ):
                listener.exitStep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStep" ):
                return visitor.visitStep(self)
            else:
                return visitor.visitChildren(self)




    def step(self):

        localctx = xlsformParser.StepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_step)
        self._la = 0 # Token type
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 7, 9, 19, 21, 32, 33, 34, 35, 38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.axisSpecifier()
                self.state = 76
                self.nodeTest()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 77
                    self.predicate()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [18, 20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.abbreviatedStep()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AxisSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AxisName(self):
            return self.getToken(xlsformParser.AxisName, 0)

        def CC(self):
            return self.getToken(xlsformParser.CC, 0)

        def AT(self):
            return self.getToken(xlsformParser.AT, 0)

        def getRuleIndex(self):
            return xlsformParser.RULE_axisSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAxisSpecifier" ):
                listener.enterAxisSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAxisSpecifier" ):
                listener.exitAxisSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAxisSpecifier" ):
                return visitor.visitAxisSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def axisSpecifier(self):

        localctx = xlsformParser.AxisSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_axisSpecifier)
        self._la = 0 # Token type
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(xlsformParser.AxisName)
                self.state = 87
                self.match(xlsformParser.CC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 88
                    self.match(xlsformParser.AT)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeTestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nameTest(self):
            return self.getTypedRuleContext(xlsformParser.NameTestContext,0)


        def NodeType(self):
            return self.getToken(xlsformParser.NodeType, 0)

        def LPAR(self):
            return self.getToken(xlsformParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(xlsformParser.RPAR, 0)

        def Literal(self):
            return self.getToken(xlsformParser.Literal, 0)

        def getRuleIndex(self):
            return xlsformParser.RULE_nodeTest

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeTest" ):
                listener.enterNodeTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeTest" ):
                listener.exitNodeTest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeTest" ):
                return visitor.visitNodeTest(self)
            else:
                return visitor.visitChildren(self)




    def nodeTest(self):

        localctx = xlsformParser.NodeTestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_nodeTest)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.nameTest()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(xlsformParser.NodeType)
                self.state = 95
                self.match(xlsformParser.LPAR)
                self.state = 96
                self.match(xlsformParser.RPAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.match(xlsformParser.T__0)
                self.state = 98
                self.match(xlsformParser.LPAR)
                self.state = 99
                self.match(xlsformParser.Literal)
                self.state = 100
                self.match(xlsformParser.RPAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRAC(self):
            return self.getToken(xlsformParser.LBRAC, 0)

        def expr(self):
            return self.getTypedRuleContext(xlsformParser.ExprContext,0)


        def RBRAC(self):
            return self.getToken(xlsformParser.RBRAC, 0)

        def getRuleIndex(self):
            return xlsformParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = xlsformParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(xlsformParser.LBRAC)
            self.state = 104
            self.expr()
            self.state = 105
            self.match(xlsformParser.RBRAC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AbbreviatedStepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(xlsformParser.DOT, 0)

        def DOTDOT(self):
            return self.getToken(xlsformParser.DOTDOT, 0)

        def getRuleIndex(self):
            return xlsformParser.RULE_abbreviatedStep

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAbbreviatedStep" ):
                listener.enterAbbreviatedStep(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAbbreviatedStep" ):
                listener.exitAbbreviatedStep(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbbreviatedStep" ):
                return visitor.visitAbbreviatedStep(self)
            else:
                return visitor.visitChildren(self)




    def abbreviatedStep(self):

        localctx = xlsformParser.AbbreviatedStepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_abbreviatedStep)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not(_la==18 or _la==20):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(xlsformParser.OrExprContext,0)


        def getRuleIndex(self):
            return xlsformParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = xlsformParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableReference(self):
            return self.getTypedRuleContext(xlsformParser.VariableReferenceContext,0)


        def LPAR(self):
            return self.getToken(xlsformParser.LPAR, 0)

        def expr(self):
            return self.getTypedRuleContext(xlsformParser.ExprContext,0)


        def RPAR(self):
            return self.getToken(xlsformParser.RPAR, 0)

        def Literal(self):
            return self.getToken(xlsformParser.Literal, 0)

        def Number(self):
            return self.getToken(xlsformParser.Number, 0)

        def functionCall(self):
            return self.getTypedRuleContext(xlsformParser.FunctionCallContext,0)


        def getRuleIndex(self):
            return xlsformParser.RULE_primaryExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpr" ):
                listener.enterPrimaryExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpr" ):
                listener.exitPrimaryExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpr" ):
                return visitor.visitPrimaryExpr(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpr(self):

        localctx = xlsformParser.PrimaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_primaryExpr)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.variableReference()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(xlsformParser.LPAR)
                self.state = 113
                self.expr()
                self.state = 114
                self.match(xlsformParser.RPAR)
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(xlsformParser.Literal)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 117
                self.match(xlsformParser.Number)
                pass
            elif token in [7, 9, 32, 33, 34, 35, 38]:
                self.enterOuterAlt(localctx, 5)
                self.state = 118
                self.functionCall()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionName(self):
            return self.getTypedRuleContext(xlsformParser.FunctionNameContext,0)


        def LPAR(self):
            return self.getToken(xlsformParser.LPAR, 0)

        def RPAR(self):
            return self.getToken(xlsformParser.RPAR, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(xlsformParser.ExprContext)
            else:
                return self.getTypedRuleContext(xlsformParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(xlsformParser.COMMA)
            else:
                return self.getToken(xlsformParser.COMMA, i)

        def getRuleIndex(self):
            return xlsformParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)




    def functionCall(self):
